Exemplos/Livraria/K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
    - host: livraria.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: livraria
                port: 
                  number: 8080
    - host: transacao.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transacao-api
                port:
                  number: 8081
